--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,39 +1,70 @@
-body{
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.outer-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    box-sizing: border-box;
-    overflow: none;
+.outer-container {
+  height: 100vh;
+  max-width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  background-color: rgb(64, 64, 64);
+  color: white;
 }
 
-.inner-container{
-    display: flex;
-    justify-content: space-between;
-    width: 80%;
-    box-sizing: border-box;
+.time-box {
+  color: white;
+  height: 100%;
+  max-width: 100%;
+  box-shadow: 0 18px 48px -22px black;
+  margin: 20px;
+  padding: 20px 20px 0px 20px;
+  border-radius: 10px;
+  border: 1px solid #272727;
 }
 
-.time-box{
-    width: 100%;
-    box-shadow: 0 18px 48px -22px;
-    box-sizing: border-box;
-    margin: 20px;
-    padding: 0 20px;
-    border-radius: 10px;
-    border: 1px solid #acacac;
+.title-container {
+  display: flex;
+  align-items: center;
 }
 
-.direction-title{
-    font-size: 35px;
+.direction-title {
+  font-size: 45px;
+  margin: 0;
 }
 
-.time-title{
-    font-size: 24px;
+.time-title {
+  font-size: 30px;
+  margin: 10px;
+}
+
+.line-logo {
+  font-size: 35px;
+  background-color: #a5cd3a;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-weight: bolder;
+  display: flex;
+  width: 50px;
+  height: 50px;
+  margin-right: 15px;
+}
+
+@keyframes fadeInOut {
+  0%,
+  100% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+.fade-in-out {
+  animation: fadeInOut 3s ease-in-out infinite;
+  color: rgb(211, 43, 43);
+  font-weight: bold;
 }
