--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -11,6 +11,8 @@ body {
   flex-direction: column;
   background-color: rgb(64, 64, 64);
   color: white;
+  padding: 0 15px 15px 15px;
+  box-sizing: border-box;
 }
 
 .time-box {
@@ -18,15 +20,18 @@ body {
   height: 100%;
   max-width: 100%;
   box-shadow: 0 18px 48px -22px black;
-  margin: 20px;
-  padding: 20px 20px 0px 20px;
+  padding: 20px 20px 20px 20px;
   border-radius: 10px;
   border: 1px solid #272727;
+  display: flex;
+  flex-direction: column;
+  margin-top: 15px;
 }
 
 .title-container {
   display: flex;
   align-items: center;
+  margin-bottom: 15px;
 }
 
 .direction-title {
@@ -34,9 +39,17 @@ body {
   margin: 0;
 }
 
+.time-title-container{
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  height: 100%;
+  padding-left: 30px;
+}
+
 .time-title {
   font-size: 30px;
-  margin: 10px;
+  margin: 0;
 }
 
 .line-logo {
@@ -67,4 +80,5 @@ body {
   animation: fadeInOut 3s ease-in-out infinite;
   color: rgb(211, 43, 43);
   font-weight: bold;
+  font-style: italic;
 }
